[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Flag.gd" type="Script" id=1]
[ext_resource path="res://art/flag/flag.png" type="Texture" id=2]
[ext_resource path="res://sound/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://sound/plant.mp3.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.6516, 5.83384 )

[sub_resource type="CircleShape2D" id=3]

[node name="Flag" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -6.52551, -8 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.69341, -5.79787 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -6.24983, -7.84702 )
shape = SubResource( 3 )

[node name="Pickup_Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="FlagCam_Timer" type="Timer" parent="."]
one_shot = true

[node name="Blink_Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Plant" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Pickup_Timer" to="." method="_on_Pickup_Timer_timeout"]
[connection signal="timeout" from="FlagCam_Timer" to="." method="_on_FlagCam_Timer_timeout"]
[connection signal="timeout" from="Blink_Timer" to="." method="_on_Blink_Timer_timeout"]
